--- a/client/src/app/Pages/home/home.component.html
+++ b/client/src/app/Pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto">
     <div class="flex flex-wrap">
-        <div class="w-full md:w-1/4">
+        <div class="w-full md:w-1/5 mt-13 mr-4">
             <app-category-side-menu></app-category-side-menu>
         </div>
         <div class="w-full md:w-3/4">
