--- a/client/src/app/Pages/post-details/post-details.component.html
+++ b/client/src/app/Pages/post-details/post-details.component.html
@@ -1,30 +1,30 @@
 <div class="container mx-auto">
     <nav class="text-sm font-medium text-gray-500">
         <a href="/" class="text-blue-500 hover:underline">Home</a> /
-        <span>title</span>
+        <span>{{postDetails?.title}}</span>
     </nav>
 
     <div class="mt-8">
         <div class="md:w-full">
             <div class="bg-white shadow-md p-6">
-                <p class="text-sm text-gray-600">Posted By <a href=""
-                        class="font-semibold text-blue-500 hover:underline">name</a> on <span
-                        class="font-semibold">addedDate</span></p>
-                <p class="text-sm text-gray-600">categoryTitle</p>
-                <h2 class="text-xl font-semibold mt-4">title</h2>
+                <p class="text-sm text-gray-600">Posted By <a href="" [routerLink]="'/user/' + postDetails?.userId?._id"
+                        class="font-semibold text-blue-500 hover:underline">{{postDetails?.userId?.name}}</a> on <span
+                        class="font-semibold">{{postDetails?.createdAt | date:'mediumDate'}}</span></p>
+                <p class="text-sm text-gray-600">{{postDetails?.post?.category}}</p>
+                <h2 class="text-xl font-semibold mt-4">{{postDetails?.title}}</h2>
                 <div class="image-container mt-4">
                     <!-- <img src="{{ BASE_URL }}/post/image/{{ postDetails?.imageName }}" alt="" class="w-full"> -->
                 </div>
-                <div class="mt-4">Test</div>
+                <div class="mt-4">{{postDetails?.content}}</div>
             </div>
         </div>
 
         <div class="md:w-8/12 md:mx-auto mt-8">
-            <h3 class="text-xl font-semibold">Comments (2)</h3>
-            <ng-container *ngIf="postDetails?.comments">
-                <div *ngFor="let comment of postDetails?.comments" class="bg-white shadow-md mt-4">
+            <h3 class="text-xl font-semibold">Comments ({{comments?.length}})</h3>
+            <ng-container *ngIf="comments">
+                <div *ngFor="let comment of comments" class="bg-white shadow-md mt-4">
                     <div class="p-4">
-                        <p>{{ comment.content }}</p>
+                        <p>{{ comment.comment }}</p>
                     </div>
                 </div>
             </ng-container>
@@ -33,7 +33,7 @@
                 <div class="p-4">
                     <textarea
                         class="w-full bg-gray-100 border border-gray-300 rounded p-2 focus:outline-none focus:border-blue-500"
-                        rows="4" placeholder="Enter comment here"></textarea>
+                        rows="4" placeholder="Enter comment here" [(ngModel)]="userComment"></textarea>
                 </div>
                 <div class="p-4">
                     <button (click)="submitComment()"
