--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,3 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+// regular style toast
+@import 'ngx-toastr/toastr';
+
+// @import '~quill/dist/quill.bubble.css';
