--- a/client/src/app/Pages/signin/signin.component.html
+++ b/client/src/app/Pages/signin/signin.component.html
@@ -6,19 +6,22 @@
                 <form [formGroup]="signInForm" (ngSubmit)="submitHandler()">
                     <div class="mb-4">
                         <label class="block text-gray-700 text-sm font-bold mb-2" for="username">Enter Email</label>
-                        <input type="text" id="username" class="form-input w-full" placeholder="Enter email"
-                            formControlName="email" />
+                        <input type="text" id="username"
+                            class="block w-full rounded-md border-0 py-1.5 pl-4 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                            placeholder="Enter email" formControlName="email" />
                     </div>
                     <div class="mb-4">
                         <label class="block text-gray-700 text-sm font-bold mb-2" for="password">Enter Password</label>
-                        <input type="password" id="password" class="form-input w-full" placeholder="Enter password"
-                            formControlName="password" />
+                        <input type="password" id="password"
+                            class="block w-full rounded-md border-0 py-1.5 pl-4 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                            placeholder="Enter password" formControlName="password" />
                     </div>
                     <div class="text-center">
                         <button class="bg-gray-800 hover:bg-gray-900 text-white font-bold py-2 px-4 rounded"
                             type="submit">Login</button>
                     </div>
-                    <p><a routerLink="/forget-password">Forgot password</a></p>
+                    <p class="text-center mt-4 text-gray-400 hover:text-gray-800"><a
+                            routerLink="/forget-password">Forgot password</a></p>
                 </form>
             </div>
         </div>
