--- a/client/src/app/Pages/user-profile/user-profile.component.html
+++ b/client/src/app/Pages/user-profile/user-profile.component.html
@@ -3,14 +3,14 @@
         <div class="p-6">
             <h3 class="text-xl font-bold mb-4">User Details</h3>
             <div class="text-center">
-                <img [src]="user.image ? user.image : 'https://upload.wikimedia.org/wikipedia/commons/b/b5/Windows_10_Default_Profile_Picture.svg'"
+                <img [src]="user?.image ? user?.image : 'https://upload.wikimedia.org/wikipedia/commons/b/b5/Windows_10_Default_Profile_Picture.svg'"
                     alt="User Image" class="max-w-150 max-h-150 rounded-full mx-auto mb-6 w-60">
             </div>
             <table class="w-full text-center border-collapse">
                 <tbody>
                     <tr>
                         <td class="text-uppercase font-bold border border-gray-300 py-2 px-4">BloggingId</td>
-                        <td class="border border-gray-300 py-2 px-4">{{ user._id }}</td>
+                        <td class="border border-gray-300 py-2 px-4">{{ user?._id }}</td>
                     </tr>
                     <tr>
                         <td class="text-uppercase font-bold border border-gray-300 py-2 px-4">Name</td>
@@ -27,7 +27,7 @@
                     <tr>
                         <td class="text-uppercase font-bold border border-gray-300 py-2 px-4">Role</td>
                         <td class="border border-gray-300 py-2 px-4">
-                            <div *ngFor="let role of user?.roles">{{ role.name }}</div>
+                            <div>{{ user?.role }}</div>
                         </td>
                     </tr>
                 </tbody>
