--- a/client/src/app/Pages/forgot-password/forgot-password.component.html
+++ b/client/src/app/Pages/forgot-password/forgot-password.component.html
@@ -5,9 +5,10 @@
                 <h3 class="text-xl font-semibold mb-4">Get Reset Link on Email</h3>
                 <form [formGroup]="forgetForm">
                     <div class="mb-4">
-                        <label class="block text-gray-700 text-sm font-bold mb-2" for="username">Enter Email</label>
-                        <input type="text" id="username" class="form-input w-full" placeholder="Enter email"
-                            formControlName="email" />
+                        <label class="block text-gray-700 text-sm font-bold mb-2" for="username">Email</label>
+                        <input type="text" id="username"
+                            class="block w-full rounded-md border-0 py-1.5 pl-4 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                            placeholder="Enter email" formControlName="email" />
                     </div>
                     <div class="text-center">
                         <button class="bg-gray-800 hover:bg-gray-900 text-white font-bold py-2 px-4 rounded"
