--- a/client/src/app/Components/post/post.component.html
+++ b/client/src/app/Components/post/post.component.html
@@ -1,14 +1,15 @@
 <div class="border-0 shadow mt-3">
     <div class="p-4">
         <h2 class="text-xl font-semibold">{{post?.title}}</h2>
-        <div class="text-gray-700">{{post?.content | slice:0:100}}...</div>
+        <div class="text-gray-700">{{(post?.content.length > 100 ? post?.content.slice(0, 100) + '...' :
+            post?.content)}}</div>
         <div class="mt-4">
             <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
                 (click)="onReadMore(post?._id)">Read More</a>
             <button *ngIf="loggedUserId === post?.userId?._id"
                 class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded ml-2"
                 (click)="deleteHandler(post)">Delete</button>
-            <button *ngIf="loggedUserId === post?.userId?._id"
+            <button *ngIf="loggedUserId === post?.userId?._id" (click)="onUpdateClick(post?._id)"
                 class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded ml-2">Update</button>
         </div>
     </div>
