--- a/client/src/app/Pages/signup/signup.component.html
+++ b/client/src/app/Pages/signup/signup.component.html
@@ -36,7 +36,7 @@
                         <!-- <div class="text-red-500 text-sm mt-1" *ngIf="error.error?.response?.data?.about">{{
                             error.error?.response?.data?.about }}</div> -->
                     </div>
-                    <div class="text-center">
+                    <div class="text-center flex justify-evenly">
                         <button class="bg-gray-800 hover:bg-gray-900 text-white font-bold py-2 px-4 rounded"
                             type="submit">Register</button>
                         <button class="bg-gray-400 hover:bg-gray-500 text-white font-bold py-2 px-4 rounded"
