--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,15 +1,7 @@
-<app-header></app-header>
+<ng-container *ngIf="!hideHeader">
+    <app-header></app-header>
+</ng-container>
 <router-outlet></router-outlet>
-
-<!-- <div *ngIf="true" class="fixed top-0 left-0 w-full h-full flex justify-center items-center z-50">
-    <div class="border-8 border-gray-300 border-t-8 border-blue-500 rounded-full w-20 h-20 animate-spin"></div>
-</div> -->
-
-<!-- <div *ngIf="true" class="fixed top-0 left-0 w-full h-full flex justify-center items-center z-50">
-    <div class="border-4 border-blue-500 border-solid rounded-full w-12 h-12 animate-spin">
-        <div class="w-10 h-10 border-4 border-white border-solid rounded-full"></div>
-    </div>
-</div> -->
 
 <div role="status" *ngIf="loaderService.loaderState$ | async"
     class="fixed top-0 left-0 w-full h-full flex justify-center items-center z-50">
