--- a/client/src/app/AdminPanel/Pages/admin-home/admin-home.component.html
+++ b/client/src/app/AdminPanel/Pages/admin-home/admin-home.component.html
@@ -1,1 +1,48 @@
-<p>home</p>
+<div class="flex justify-between mt-6">
+    <div
+        class="w-1/3 bg-white p-4 rounded-lg h-32 mx-4 hover:bg-gray-300 transition duration-300 shadow-md flex flex-col items-center justify-center">
+        <!-- Icon -->
+        <!-- <svg class="w-6 h-6 mb-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
+        </svg> -->
+        <i class="fa fa-users text-2xl"></i>
+        <!-- Text -->
+        <div>Users</div>
+        <div>20</div>
+    </div>
+    <div
+        class="w-1/3 bg-white p-4 rounded-lg h-32 mx-4 hover:bg-gray-300 transition duration-300 shadow-md flex flex-col items-center justify-center">
+        <!-- Icon -->
+        <!-- <svg class="w-6 h-6 mb-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
+        </svg> -->
+        <i class="fa fa-blog text-2xl"></i>
+        <!-- Text -->
+        <div>Posts</div>
+        <div>20</div>
+    </div>
+    <div
+        class="w-1/3 bg-white p-4 rounded-lg h-32 mx-4 hover:bg-gray-300 transition duration-300 shadow-md flex flex-col items-center justify-center">
+        <!-- Icon -->
+        <!-- <svg class="w-6 h-6 mb-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
+        </svg> -->
+        <i class="fa fa-comments text-2xl"></i>
+        <!-- Text -->
+        <div>Comments</div>
+        <div>20</div>
+    </div>
+</div>
+
+<div class="flex justify-center items-center mt-6">
+    <div class="w-1/2 bg-white m-4 rounded-lg p-7 shadow-md">
+        <canvas baseChart [type]="'pie'" [datasets]="pieChartDatasets" [labels]="pieChartLabels"
+            [options]="pieChartOptions" [plugins]="pieChartPlugins" [legend]="pieChartLegend">
+        </canvas>
+    </div>
+    <div class="w-1/2 bg-white m-4 rounded-lg p-7 shadow-md">
+        <canvas baseChart [type]="'pie'" [datasets]="pieChartDatasets" [labels]="pieChartLabels"
+            [options]="pieChartOptions" [plugins]="pieChartPlugins" [legend]="pieChartLegend">
+        </canvas>
+    </div>
+</div>
