--- a/client/src/app/AdminPanel/Pages/users/users.component.html
+++ b/client/src/app/AdminPanel/Pages/users/users.component.html
@@ -1,1 +1,59 @@
-<p>users works!</p>
+<table class="min-w-full divide-y divide-gray-200">
+    <thead class="bg-gray-50">
+        <tr>
+            <th scope="col" class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider text-center">
+                Id
+            </th>
+            <th scope="col" class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider text-center">
+                Name
+            </th>
+            <th scope="col" class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider text-center">
+                Email
+            </th>
+            <th scope="col" class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider text-center">
+                Status
+            </th>
+            <th scope="col" class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider text-center">
+                Action
+            </th>
+        </tr>
+    </thead>
+    <tbody class="bg-white divide-y divide-gray-200">
+        <tr class="hover:bg-gray-100">
+            <td class="px-6 py-4 whitespace-nowrap">
+                <div class="flex items-center justify-center">
+                    <div class="text-sm font-medium text-gray-900">1</div>
+                </div>
+            </td>
+            <td class="px-6 py-4 whitespace-nowrap">
+                <div class="flex items-center justify-center">
+                    <div class="flex-shrink-0 h-10 w-10">
+                        <!-- User avatar or icon -->
+                        <img class="h-10 w-10 rounded-full" src="...">
+                    </div>
+                    <div class="ml-4">
+                        <!-- User name -->
+                        <div class="text-sm font-medium text-gray-900">John Doe</div>
+                    </div>
+                </div>
+            </td>
+            <td class="px-6 py-4 whitespace-nowrap">
+                <!-- User email -->
+                <div class="text-sm text-gray-900">john.doeexample.com</div>
+            </td>
+            <td class="px-6 py-4 whitespace-nowrap">
+                <!-- User email -->
+                <div class="text-sm text-gray-900">Active</div>
+            </td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-center">
+                <!-- Edit and Delete buttons -->
+                <button class="text-indigo-600 hover:text-indigo-900 mr-2">
+                    <i class="fa fa-edit text-lg"></i>
+                </button>
+                <button class="text-red-600 hover:text-red-900">
+                    <i class="fa fa-trash text-lg"></i>
+                </button>
+            </td>
+        </tr>
+    </tbody>
+</table>
