--- a/client/src/app/AdminPanel/Pages/admin-home/admin-home.component.html
+++ b/client/src/app/AdminPanel/Pages/admin-home/admin-home.component.html
@@ -35,12 +35,12 @@
 </div>
 
 <div class="flex justify-center items-center mt-6">
-    <div class="w-1/2 bg-white m-4 rounded-lg p-7 shadow-md">
+    <div class="w-1/2 bg-white m-4 rounded-lg p-7 shadow-md flex justify-center">
         <canvas baseChart [type]="'pie'" [datasets]="pieChartDatasets" [labels]="pieChartLabels"
             [options]="pieChartOptions" [plugins]="pieChartPlugins" [legend]="pieChartLegend">
         </canvas>
     </div>
-    <div class="w-1/2 bg-white m-4 rounded-lg p-7 shadow-md">
+    <div class="w-1/2 bg-white m-4 rounded-lg p-7 shadow-md flex justify-center">
         <canvas baseChart [type]="'pie'" [datasets]="pieChartDatasets" [labels]="pieChartLabels"
             [options]="pieChartOptions" [plugins]="pieChartPlugins" [legend]="pieChartLegend">
         </canvas>
