--- a/client/src/app/AdminPanel/Pages/users/users.component.html
+++ b/client/src/app/AdminPanel/Pages/users/users.component.html
@@ -19,10 +19,10 @@
         </tr>
     </thead>
     <tbody class="bg-white divide-y divide-gray-200">
-        <tr class="hover:bg-gray-100">
+        <tr class="hover:bg-gray-100" *ngFor="let user of userList">
             <td class="px-6 py-4 whitespace-nowrap">
                 <div class="flex items-center justify-center">
-                    <div class="text-sm font-medium text-gray-900">1</div>
+                    <div class="text-sm font-medium text-gray-900">{{user?._id}}</div>
                 </div>
             </td>
             <td class="px-6 py-4 whitespace-nowrap">
@@ -33,24 +33,24 @@
                     </div>
                     <div class="ml-4">
                         <!-- User name -->
-                        <div class="text-sm font-medium text-gray-900">John Doe</div>
+                        <div class="text-sm font-medium text-gray-900">{{user?.name}}</div>
                     </div>
                 </div>
             </td>
             <td class="px-6 py-4 whitespace-nowrap">
                 <!-- User email -->
-                <div class="text-sm text-gray-900">john.doeexample.com</div>
+                <div class="text-sm text-gray-900">{{user?.email}}</div>
             </td>
             <td class="px-6 py-4 whitespace-nowrap">
                 <!-- User email -->
-                <div class="text-sm text-gray-900">Active</div>
+                <div class="text-sm text-gray-900">{{user?.email}}</div>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-center">
                 <!-- Edit and Delete buttons -->
-                <button class="text-indigo-600 hover:text-indigo-900 mr-2">
+                <button class="text-indigo-600 hover:text-indigo-900 mr-2" (click)="updateUser(user)">
                     <i class="fa fa-edit text-lg"></i>
                 </button>
-                <button class="text-red-600 hover:text-red-900">
+                <button class="text-red-600 hover:text-red-900" (click)="deleteUser(user?._id)">
                     <i class="fa fa-trash text-lg"></i>
                 </button>
             </td>
