--- a/client/src/app/AdminPanel/Pages/admin-home/admin-home.component.html
+++ b/client/src/app/AdminPanel/Pages/admin-home/admin-home.component.html
@@ -8,7 +8,7 @@
         <i class="fa fa-users text-2xl"></i>
         <!-- Text -->
         <div>Users</div>
-        <div>20</div>
+        <div class="font-bold text-sky-400 text-lg">{{userCount}}</div>
     </div>
     <div
         class="w-1/3 bg-white p-4 rounded-lg h-32 mx-4 hover:bg-gray-300 transition duration-300 shadow-md flex flex-col items-center justify-center">
@@ -19,7 +19,7 @@
         <i class="fa fa-blog text-2xl"></i>
         <!-- Text -->
         <div>Posts</div>
-        <div>20</div>
+        <div class="font-bold text-sky-400 text-lg">{{postCount}}</div>
     </div>
     <div
         class="w-1/3 bg-white p-4 rounded-lg h-32 mx-4 hover:bg-gray-300 transition duration-300 shadow-md flex flex-col items-center justify-center">
@@ -30,7 +30,7 @@
         <i class="fa fa-comments text-2xl"></i>
         <!-- Text -->
         <div>Comments</div>
-        <div>20</div>
+        <div class="font-bold text-sky-400 text-lg">{{20}}</div>
     </div>
 </div>
 
